KubeConfigs/convert-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: convert
  name: convert
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: convert
    spec:
      containers:
      - env:
        - name: PDFPATHORIGIN
        - name: REDIS_HOST
        image: convert
        name: convert
        resources: {}
        volumeMounts:
        - mountPath: /data
          name: pdfdata
      restartPolicy: Always
      volumes:
      - name: pdfdata
        persistentVolumeClaim:
          claimName: pdfdata
status: {}
