KubeConfigs/converted-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: converted
  name: converted
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: converted
    spec:
      containers:
      - args:
        - sh
        - -c
        - mount -t nfs singlefs-1-vm:/data /data &&
        - mkdir /data/converted &&
        - python -m http.server 8000
        image: python:latest
        name: converted
        resources: {}
        
        workingDir: /data/converted
      restartPolicy: Always
    
 
status: {}
