KubeConfigs/redis-pdf-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: redis-pdf
  name: redis-pdf
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: redis-pdf
    spec:
      containers:
      - image: redis:latest
        name: redis-pdf
        resources: {}
        volumeMounts:
        - mountPath: /data
          name: redispdf
      restartPolicy: Always
      volumes:
      - name: redispdf
        persistentVolumeClaim:
          claimName: redispdf
status: {}
